[package]
name = "sd-listen-fds"
version = "0.1.0"
edition = "2021"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ralith/sd-listen-fds"
description = "Minimal, pure-rust helper to accept file descriptors from systemd"
categories = ["os::linux-apis", "api-bindings"]

[dependencies]

